// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an ALB with tags 1`] = `
"{
  \\"resource\\": {
    \\"aws_alb\\": {
      \\"testALB_alb_F6B33218\\": {
        \\"internal\\": false,
        \\"name_prefix\\": \\"TEST\\",
        \\"security_groups\\": [
          \\"\${aws_security_group.testALB_alb_security_group_57C45F23.id}\\"
        ],
        \\"subnets\\": [
          \\"a\\",
          \\"b\\"
        ],
        \\"tags\\": {
          \\"hobby\\": \\"bowling\\",
          \\"name\\": \\"thedude\\"
        }
      }
    },
    \\"aws_security_group\\": {
      \\"testALB_alb_security_group_57C45F23\\": {
        \\"description\\": \\"External security group  (Managed by Terraform)\\",
        \\"egress\\": [
          {
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"from_port\\": 0,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"protocol\\": \\"-1\\",
            \\"security_groups\\": null,
            \\"self\\": null,
            \\"to_port\\": 0
          }
        ],
        \\"ingress\\": [
          {
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"from_port\\": 443,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"protocol\\": \\"TCP\\",
            \\"security_groups\\": null,
            \\"self\\": null,
            \\"to_port\\": 443
          },
          {
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"from_port\\": 80,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"protocol\\": \\"TCP\\",
            \\"security_groups\\": null,
            \\"self\\": null,
            \\"to_port\\": 80
          }
        ],
        \\"lifecycle\\": {
          \\"create_before_destroy\\": true
        },
        \\"name_prefix\\": \\"test--HTTP/S Security Group\\",
        \\"tags\\": {
          \\"hobby\\": \\"bowling\\",
          \\"name\\": \\"thedude\\",
          \\"Name\\": \\"test--HTTP/S Security Group\\"
        },
        \\"vpc_id\\": \\"123\\"
      }
    }
  }
}"
`;

exports[`renders an ALB without tags 1`] = `
"{
  \\"resource\\": {
    \\"aws_alb\\": {
      \\"testALB_alb_F6B33218\\": {
        \\"internal\\": false,
        \\"name_prefix\\": \\"TEST\\",
        \\"security_groups\\": [
          \\"\${aws_security_group.testALB_alb_security_group_57C45F23.id}\\"
        ],
        \\"subnets\\": [
          \\"a\\",
          \\"b\\"
        ]
      }
    },
    \\"aws_security_group\\": {
      \\"testALB_alb_security_group_57C45F23\\": {
        \\"description\\": \\"External security group  (Managed by Terraform)\\",
        \\"egress\\": [
          {
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"from_port\\": 0,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"protocol\\": \\"-1\\",
            \\"security_groups\\": null,
            \\"self\\": null,
            \\"to_port\\": 0
          }
        ],
        \\"ingress\\": [
          {
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"from_port\\": 443,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"protocol\\": \\"TCP\\",
            \\"security_groups\\": null,
            \\"self\\": null,
            \\"to_port\\": 443
          },
          {
            \\"cidr_blocks\\": [
              \\"0.0.0.0/0\\"
            ],
            \\"description\\": null,
            \\"from_port\\": 80,
            \\"ipv6_cidr_blocks\\": null,
            \\"prefix_list_ids\\": null,
            \\"protocol\\": \\"TCP\\",
            \\"security_groups\\": null,
            \\"self\\": null,
            \\"to_port\\": 80
          }
        ],
        \\"lifecycle\\": {
          \\"create_before_destroy\\": true
        },
        \\"name_prefix\\": \\"test--HTTP/S Security Group\\",
        \\"tags\\": {
          \\"Name\\": \\"test--HTTP/S Security Group\\"
        },
        \\"vpc_id\\": \\"123\\"
      }
    }
  }
}"
`;
